# PaGE

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data_prep/: download_openimages.py  preprocess_childplay.py  preprocess_gooreal.py  preprocess_mpii.py  preprocess_openimages.py  preprocess_screen.py
page/: backbone.py  cross_attention.py  dataloader.py  fusion.py  model_factory.py  page_model.py  rope_cross_attention.py  rope_self_attention.py  utils.py
scripts/: distill.py  eval_childplay_trainstyle.py  eval_gazefollow_trainstyle.py  eval_gooreal_trainstyle.py  eval_vat_trainstyle.py  inference.py  train_all.py
