[project]
name = "page"
version = "0.1.0"
description = "PaGE: TOWARDS PRACTICAL HUMAN-LEVEL GAZE TARGET ESTIMATION"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers==5.6.2",
    "timm>=0.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
    "huggingface-hub>=0.16.0",
    "matplotlib>=3.7.0",
    "httpx[socks]>=0.24.0",
    "requests>=2.28.0",
    "opencv-python>=4.5.0,<5.0",
    "thop>=0.1.0",
    "seaborn>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page", "scripts", "data_prep"]

[dependency-groups]
dev = []
